[gd_scene load_steps=3 format=3 uid="uid://jv76so4uuq7"]

[ext_resource type="Script" path="res://assets/scripts/lobby.gd" id="1_6chws"]
[ext_resource type="Script" path="res://assets/scripts/WebSocketClient.gd" id="2_p2t3f"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Lobby" type="Node" parent="."]
script = ExtResource("1_6chws")
force_local = true
url = "34.19.80.253"
port = 80

[node name="WebSocketClient" type="Node" parent="Lobby"]
script = ExtResource("2_p2t3f")

[connection signal="connected_to_server" from="Lobby/WebSocketClient" to="Lobby" method="_on_websocket_client_connected_to_server"]
[connection signal="connection_closed" from="Lobby/WebSocketClient" to="Lobby" method="_on_websocket_client_connection_close"]
[connection signal="message_received" from="Lobby/WebSocketClient" to="Lobby" method="_on_websocket_message_received"]
